End of section 10

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZZkr-V7T9P_ABU8mdGb3PxqjkNZ-yTCw&libraries=places"></script>
+
     <title>Re-vents</title>
   </head>
   <body>
